--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
