--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["dtos", "fkey", "HAHA"]
+  "cSpell.words": ["dtos", "fkey", "HAHA", "otps", "إرسال", "استخدم", "الإلكتروني", "خدمة"]
 }
