--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cloudinary": "^2.6.0",
     "express": "^5.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
