--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 MAIL_USER=
 MAIL_PASS=
+FRONTEND_URL=
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
