--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.9",
+    "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/websockets": "^11.1.0",
     "@prisma/client": "^6.6.0",
