--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["conv", "dtos", "fkey", "HAHA", "otps", "إرسال", "استخدم", "الإلكتروني", "خدمة"]
+  "cSpell.words": ["autoincrement", "conv", "dtos", "fkey", "HAHA", "otps", "إرسال", "استخدم", "الإلكتروني", "خدمة"]
 }
